@@ -24,6 +24,14 @@
 
 2013-05-23  Richard Biener  <rguenther@suse.de>
 
+	PR tree-optimization/57380
+	* tree-ssa-phiprop.c (propagate_with_phi): Do not require at
+	least one invariant or re-used load.
+	* passes.c (init_optimization_passes): Move pass_phiprop before
+	pass_forwprop.
+
+2013-05-23  Richard Biener  <rguenther@suse.de>
+
 	PR rtl-optimization/57341
 	* ira.c (validate_equiv_mem_from_store): Use anti_dependence
 	instead of true_dependence.
